--- a/css/home.css
+++ b/css/home.css
@@ -329,3 +329,7 @@ tr, td {
 .topicTitle{
     margin-left: 3vw;
 }
+
+.topic img {
+    max-width:100%;
+}
